FAT renaming rules need to apply also to exFAT
Affected version
- Other: 41.1
Steps to reproduce
- Have a file with a name invalid on (ex)FAT. Eg, any file with a colon in it.
- Try to copy to an exFAT volume.
- See it fail; it won't fail on FAT12/16/32 due to automatic renaming rules for invalid characters.
Current behavior
Fails to copy any file/directory with an invalid name on the target exFAT volume
Expected behavior
Rename the files just like you do for FAT12/16/32 volumes.