file-operations: Apply existing FAT filename rules to exfat

exfat invalid characters align with our existing
FAT_FORBIDDEN_CHARACTERS, so we can simply add "exfat" to
make_file_name_valid_for_dest_fs()

See: https://learn.microsoft.com/en-us/windows/win32/fileio/exfat-specification#table-35-invalid-filename-characters
Fixes: https://gitlab.gnome.org/GNOME/nautilus/-/issues/2059